force-app/main/default/objects/SPA_File__c/SPA_File__c.object-meta.xml
<CustomObject>
    <label>Solution Provider Assessment</label>
    <nameField>
        <label>SPA File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solution Provider Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>