force-app/main/default/objects/SPA_File__c/fields/BFA_Complete__c.field-meta.xml
<CustomField>
    <fullName>BFA_Complete__c</fullName>
    <label>BFA Complete</label>
    <type>Date</type>
</CustomField>