force-app/main/default/objects/SPA_File__c/fields/BFA_Rating__c.field-meta.xml
<CustomField>
    <fullName>BFA_Rating__c</fullName>
    <label>BFA Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Medium Risk</fullName>
            </value>
            <value>
                <fullName>Low Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>