force-app/main/default/objects/SPA_File__c/fields/SPA_Complete__c.field-meta.xml
<CustomField>
    <fullName>SPA_Complete__c</fullName>
    <label>SPA Complete</label>
    <type>Date</type>
</CustomField>