force-app/main/default/objects/SPA_File__c/fields/TFA_Complete__c.field-meta.xml
<CustomField>
    <fullName>TFA_Complete__c</fullName>
    <label>TFA Complete</label>
    <type>Date</type>
</CustomField>