force-app/main/default/objects/SPA_File__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>BFA_Complete__c</columns>
    <columns>BFA_Rating__c</columns>
    <columns>SPA_Complete__c</columns>
    <columns>TFA_Complete__c</columns>
    <columns>TFA_Rating__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>